<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/iconhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/iconlearn"
            android:title="@string/menu_start" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/iconprofile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/iconsettings"
            android:title="@string/menu_settings" />

    </group>

    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/iconabout"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/iconlogout"
            android:title="@string/logout" />
    </group>

</menu>