<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.biskwit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.biskwit.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/lessonFragment"
        android:name="com.example.biskwit.LessonFragment"
        android:label="fragment_lesson"
        tools:layout="@layout/fragment_lesson" />
    <fragment
        android:id="@+id/storyFragment"
        android:name="com.example.biskwit.storyFragment"
        android:label="fragment_story"
        tools:layout="@layout/fragment_story" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.biskwit.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.biskwit.Logout"
        android:label="fragment_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>